# oura-reader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRIVACY.md  README.md  TERMS.md  docker-compose.yml  go.mod  go.sum
clients/mcp/: README.md  pyproject.toml
clients/mcp/scripts/: check_endpoints.py
clients/mcp/src/oura_mcp/: __init__.py  __main__.py  client.py  config.py  endpoints.py  server.py  tools.py
clients/mcp/tests/: conftest.py  test_client.py  test_config.py  test_integration.py  test_no_leak.py  test_tools.py
clients/python/: pyproject.toml
clients/python/src/oura_reader/: __init__.py  client.py  exceptions.py
clients/python/tests/: test_client.py
cmd/oura-reader/: main.go
docs/: DEPLOYMENT.md
docs/plans/: 2026-04-12-oura-mcp.md
docs/specs/: 2026-04-12-oura-mcp-design.md
internal/config/: config.go  config_test.go
internal/crypto/: crypto.go  crypto_test.go
internal/oauth/: manager.go  manager_test.go  store.go
internal/oura/: client.go  endpoints.go  models.go
internal/scheduler/: scheduler.go
internal/server/: handlers_auth.go  handlers_data.go  handlers_sync.go  middleware.go  server.go
internal/store/: migrations.go  store.go
internal/user/: manager.go
skills/oura-reader/: SKILL.md
