[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oura-reader-mcp"
version = "0.1.0"
description = "MCP server exposing the oura-reader REST API to AI agents over stdio"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
oura-reader-mcp = "oura_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oura_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
