[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oura-reader-client"
version = "0.1.0"
description = "Python client for oura-reader API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oura_reader"]
